# esp-rainmaker

./: .gitignore
examples/common/rmaker_matter_controller/: CMakeLists.txt  Kconfig  REMOTE_CONTROL.md  app_rmaker_matter_attr_json.cpp  app_rmaker_matter_controller.c  app_rmaker_matter_controller_attr_report.cpp  app_rmaker_matter_controller_cmd_resp.cpp  app_rmaker_matter_controller_service.c  app_rmaker_matter_json_tlv.cpp  app_rmaker_matter_rmctl.c  idf_component.yml  test.md
examples/common/rmaker_matter_controller/include/: app_rmaker_matter_controller.h  app_rmaker_matter_rmctl.h
examples/common/rmaker_matter_controller/priv_include/: app_rmaker_matter_attr_json.h  app_rmaker_matter_controller_internal.h  app_rmaker_matter_controller_service.h  app_rmaker_matter_json_tlv.h  app_rmaker_matter_rmctl_internal.h
examples/matter/common/app_controller/: CMakeLists.txt  app_controller.cpp  app_controller_console.cpp  app_controller_op_creds_issuer.cpp  app_controller_op_creds_issuer.h  idf_component.yml
examples/matter/common/app_controller/include/: app_controller.h
examples/matter/common/app_controller/priv_include/: app_controller_console.h  app_controller_op_creds_issuer.h
examples/matter/common/app_end_device/: CMakeLists.txt  Kconfig.projbuild  app_end_device.cpp  idf_component.yml  led_driver_gpio.c
examples/matter/common/app_end_device/include/: app_end_device.h  led_driver.h
examples/matter/common/app_matter/: app_matter.cpp
examples/matter/common/app_matter/include/: app_matter.h
examples/matter/common/controller_rest_apis/: controller_rest_apis.c
examples/matter/matter_bridge_with_controller/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/matter/matter_bridge_with_controller/main/: CMakeLists.txt  app_main.cpp  app_matter_bridge.cpp  app_matter_bridge.h  app_matter_controller.cpp  app_matter_controller.h  app_matter_noc_manager.cpp  app_matter_noc_manager.h  app_priv.h  idf_component.yml
examples/matter/matter_bridge_with_controller/main/rmaker_controller_service/: SPEC.md  app_matter_controller.cpp  app_matter_controller.h  app_matter_controller_callback.cpp  app_matter_controller_callback.h  app_matter_device_manager.h
examples/matter/matter_controller/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.otbr
examples/matter/matter_controller/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
examples/matter/matter_controller_with_touchscreen/: CMakeLists.txt  idf_ext.py  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.otbr
examples/matter/matter_controller_with_touchscreen/main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_matter_ctrl.cpp  app_matter_ctrl.h  app_matter_device_list.cpp  app_matter_device_list.h  app_matter_onoff.cpp  app_matter_onoff.h  app_priv.h  esp_ot_config.h  idf_component.yml
examples/matter/matter_controller_with_touchscreen/main/box/: box_platform.c
examples/matter/matter_controller_with_touchscreen/main/box/gui/: ui_about_us.c  ui_main.c  ui_matter_ctrl.cpp  ui_matter_ctrl.h
examples/matter/matter_light/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32h2
examples/matter/matter_light/main/: CMakeLists.txt  Kconfig.projbuild  app_driver.cpp  app_main.cpp  app_matter_light.cpp  app_priv.h  idf_component.yml  led_driver_rgb.c
examples/matter/matter_switch/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c6
examples/matter/matter_switch/main/: CMakeLists.txt  Kconfig.projbuild  app_driver.cpp  app_main.cpp  app_matter_switch.cpp  idf_component.yml
